# yocto-mirrors_github_efficios_babeltrace

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.adoc  ChangeLog  LICENSE  Makefile.am  README.adoc  configure.ac  dev-requirements.txt  pyproject.toml  setup.cfg
doc/: Makefile.am  REUSE.toml  impl-details.adoc
doc/api/libbabeltrace2/: Doxyfile.in
doc/api/libbabeltrace2/dox/: api-fund.dox  guides.dox
doc/bindings/python/ext/: bt2sphinxurl.py
doc/internal/: Doxyfile.in  Makefile.am  all.dox  cpp.dox  style.css
doc/man/: Makefile.am  README.adoc  babeltrace2-convert.1.txt  babeltrace2-filter.lttng-utils.debug-info.7.txt  babeltrace2-filter.utils.muxer.7.txt  babeltrace2-filter.utils.trimmer.7.txt  babeltrace2-help.1.txt  babeltrace2-intro.7.txt  babeltrace2-list-plugins.1.txt  babeltrace2-plugin-ctf.7.txt  babeltrace2-plugin-lttng-utils.7.txt  babeltrace2-plugin-text.7.txt  babeltrace2-plugin-utils.7.txt  babeltrace2-query-babeltrace.support-info.7.txt  babeltrace2-query-babeltrace.trace-infos.7.txt  babeltrace2-query.1.txt  babeltrace2-run.1.txt  babeltrace2-sink.ctf.fs.7.txt  babeltrace2-sink.text.details.7.txt  babeltrace2-sink.text.pretty.7.txt  babeltrace2-sink.utils.counter.7.txt  babeltrace2-sink.utils.dummy.7.txt  babeltrace2-source.ctf.fs.7.txt  babeltrace2-source.ctf.lttng-live.7.txt  babeltrace2-source.text.dmesg.7.txt  babeltrace2.1.txt  bt-asciidoctor-ext.rb  common-cli-env.txt  common-cli-files.txt  common-cmd-info-options.txt  common-cmd-params-format.txt  common-common-env.txt  common-convert-examples.txt  common-footer.txt  common-gen-options.txt  common-lib-env.txt  common-log-levels.txt  common-see-babeltrace2-intro.txt  common-trimmer-time-format.txt  manpage.xsl
src/cli/: Makefile.am  babeltrace2-cfg-cli-args-connect.h  babeltrace2-cfg-cli-args-default.c  babeltrace2-cfg-cli-args-default.h  babeltrace2-cfg-cli-args.c  babeltrace2-cfg-cli-args.h  babeltrace2-cfg.h  babeltrace2-log-level.c  babeltrace2-plugins.c  babeltrace2-plugins.h  babeltrace2-query.h  babeltrace2.c
tests/: Makefile.am  REUSE.toml  conftest.py  pytest-tests.sh
tests/bindings/python/bt2/: conftest.py  pytest_clock_class.py  pytest_clock_snapshot.py  pytest_connection.py  pytest_event.py  pytest_event_class.py  pytest_field_class.py  pytest_integer_range_set.py  pytest_message.py  pytest_mip.py  pytest_mip1.py  pytest_package.py  pytest_packet.py  pytest_query_executor.py  pytest_stream_class.py  pytest_trace.py  pytest_trace_class.py  pytest_trace_collection_message_iterator.py  pytest_value.py  test_clock_class.py  test_clock_offset.py  test_component.py  test_component_class.py  (+18 more)
tests/bitfield/: Makefile.am  test-bitfield.cpp
tests/cli/: Makefile.am  bt_plugin_query.py  bt_plugin_test_cli_exit_status.py  test_auto_src_comp_discovery_grouping.py  test_auto_src_comp_discovery_log_level.py  test_auto_src_comp_discovery_params.py  test_convert_args.py  test_exit_status.py  test_help.py  test_intersection.py  test_list_plugins.py  test_output_ctf_metadata.py  test_output_path_ctf_non_lttng_trace  test_output_path_ctf_non_lttng_trace.py  test_packet_seq_num  test_packet_seq_num.py  test_params.py  test_query.py  test_trace_copy.py  test_trace_read.py  test_trimmer.py
tests/cpp-common/: test-c-string-view.cpp  test-unicode-conv.cpp  test-uuid.cpp
tests/ctf-writer/: Makefile.am  test-ctf-writer.cpp  test_ctf_writer_trace.py
tests/data/: test_temp.py
tests/lib/: Makefile.am  test-bt-uuid.c  test-bt-values.cpp  test-fields.cpp  test-graph-topo.cpp  test-mip.cpp  test-plugin-init-fail-no.sh  test-plugin-init-fail-yes.sh  test-plugin-init-fail.cpp  test-plugins.cpp  test-remove-destruction-listener-in-destruction-listener.cpp  test-simple-sink.cpp  test-trace-ir-ref.cpp
tests/lib/conds/: README.adoc  clk-cls-compat-postconds-triggers.cpp  conds-triggers.cpp  conftest.py  fc-tc-match-preconds-triggers.cpp  fc-tc-match-preconds-triggers.hpp  utils.cpp  utils.hpp
tests/lib/utils/: run-in.cpp
tests/param-validation/: Makefile.am  test-param-validation.cpp
tests/plugins/: Makefile.am
tests/plugins/flt.lttng-utils.debug-info/: Makefile.am  bin-info-test.cpp  dwarf-test.cpp  test_bin_info.py  test_dwarf.py  test_succeed_debug_info.py  trace-debug-info-mip1.expect
tests/plugins/flt.utils.muxer/: Makefile.am  test-clock-compatibility.cpp  test_clock_compat.py  test_succeed_muxer.py
tests/plugins/flt.utils.trimmer/: Makefile.am  test_succeed_trimmer.py
tests/plugins/sink.ctf.fs/: Makefile.am  test-assume-single-trace.sh  test-stream-names.sh  test_assume_single_trace.py  test_create_lttng_index.py  test_stream_names.py  test_tc_workaround.py
tests/plugins/sink.text.details/: Makefile.am  default-ctf2-mip1.expect  default-without-metadata-mip1.expect  default-without-names-ctf1-mip1.expect  default-without-names-ctf2-mip1.expect  default-without-time-ctf1-mip1.expect  default-without-time-ctf2-mip1.expect  default-without-uuid-ctf1-mip1.expect  test_succeed_details.py
tests/plugins/sink.text.pretty/: Makefile.am  fl-bm-ctf2.expect  test_enum.py  test_pretty.py
tests/plugins/src.ctf.fs/: Makefile.am  empty-event-record.expect  test_deterministic_ordering.py  test_fail_src_ctf.py  test_query_metadata_info.py  test_query_support_info.py  test_query_trace_info.py
tests/plugins/src.ctf.lttng-live/: Makefile.am  base-2.15.json  cli-base-2.15.expect  cli-list-sessions-2.15.expect  cli-list-sessions.expect  cli-multi-domains-2.15.expect  conftest.py  list-sessions-2.15.json  lttng_live_server.py  multi-domains-2.15.json  multi-domains-inverse-2.15.json  test-live.sh  test-query.sh  test_live.py  test_query_live.py
tests/python-plugin-provider/: Makefile.am  test_python_plugin_provider.py
tests/utils/: Makefile.am  common.hpp  env.sh.in  pytest-env.sh.in  run-in-env.sh.in  run-in-pytest-env.sh.in  utils.sh
tests/utils/catch2/: catch_user_config.hpp
tests/utils/python/: bt_plugin_trace_ir_test.py  bt_tests_cli_utils.py  bt_tests_utils.py  cli_params_to_string.py  mctf.py  moultipart.py  normand.py  testrunner.py  tjson.py
(+944 files in other folders)
