# SPDX-FileCopyrightText: 2024 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

SUBDIRS = man

if ENABLE_API_DOC
SUBDIRS += api/libbabeltrace2
endif

if ENABLE_INTERNAL_DOC
SUBDIRS += internal
endif

if ENABLE_PYTHON_BINDINGS_DOC
SUBDIRS += bindings/python
endif

EXTRA_DIST = \
	impl-details.adoc \
	impl-details-images/bt-ref01.png \
	impl-details-images/bt-ref02.png \
	impl-details-images/bt-ref03.png \
	impl-details-images/bt-ref04.png \
	impl-details-images/bt-ref05.png \
	impl-details-images/bt-ref06.png \
	impl-details-images/bt-ref07.png \
	impl-details-images/bt-ref08.png \
	impl-details-images/bt-ref09.png \
	impl-details-images/bt-ref10.png \
	impl-details-images/bt-ref11.png \
	impl-details-images/bt-ref12.png \
	impl-details-images/bt-ref13.png
